fix cast vote button alignment

--- a/app/components/views/ProposalDetails/ProposalDetails.module.css
+++ b/app/components/views/ProposalDetails/ProposalDetails.module.css
@@ -52,7 +52,7 @@
   height: 60px;
 }
 
-.overviewVoting .button {
+.castVoteButton {
   padding: 6px 18px;
   position: relative;
   top: -4px;
